fix: touch swipe pictures - set a gap on touch

--- a/assets/css/sass/components/carousel.scss
+++ b/assets/css/sass/components/carousel.scss
@@ -22,7 +22,6 @@
   width: 88%;
   height: 400px;
   margin: auto;
-  border-radius: 5px 5px;
   display: flex;
   align-items: center;
   justify-content: center;
